@@ -2,5 +2,5 @@
 
 author    = Jiri Olsa
 email     = olsajiri@gmail.com
-date      = @LT_DATE@
-revision  = @LT_VER@
+date      = @CONFIG_DATE@
+revision  = @CONFIG_VERSION@
