@@ -19,29 +19,30 @@
 
 # @configure_input@
 
-prefix              = @prefix@
-exec_prefix         = @exec_prefix@
-bindir              = @bindir@
-libdir              = @libdir@
-datadir             = @datadir@
-mandir              = @mandir@
-datarootdir         = @datarootdir@
-sysconfdir          = @sysconfdir@
+prefix                = @prefix@
+exec_prefix           = @exec_prefix@
+bindir                = @bindir@
+libdir                = @libdir@
+datadir               = @datadir@
+mandir                = @mandir@
+datarootdir           = @datarootdir@
+sysconfdir            = @sysconfdir@
 
-RM                  = rm
-FIND                = find
-CC                  = @CC@
-LEX                 = @LEX@
-LEXLIB              = @LEXLIB@
-YACC                = @YACC@
-CPPFLAGS            = @CPPFLAGS@
-CFLAGS              = @CFLAGS@
-LDFLAGS             = @LDFLAGS@
-LIBS                = @LIBS@
+RM                    = rm
+FIND                  = find
+CC                    = @CC@
+LEX                   = @LEX@
+LEXLIB                = @LEXLIB@
+YACC                  = @YACC@
+CPPFLAGS              = @CPPFLAGS@
+CFLAGS                = @CFLAGS@
+LDFLAGS               = @LDFLAGS@
+LIBS                  = @LIBS@
 
-ASCIIDOC            = @ASCIIDOC@
-XMLTO               = @XMLTO@
+ASCIIDOC              = @ASCIIDOC@
+XMLTO                 = @XMLTO@
 
-CONFIG_SYSDEP_DIR   = @CONFIG_SYSDEP_DIR@
+CONFIG_SYSDEP_DIR     = @CONFIG_SYSDEP_DIR@
 
-LT_VER              = @LT_VER@
+CONFIG_VERSION        = @CONFIG_VERSION@
+CONFIG_ARCH_HAVE_ARGS = @CONFIG_ARCH_HAVE_ARGS@
